Adds header markup

--- a/src/index.html
+++ b/src/index.html
@@ -11,42 +11,56 @@
     <header class="header">
         <div class="container">
             <div class="header__wrap">
-                <a href="#" class="logo">
-                    <img src="icons/logo.svg" width="39" height="50" alt="Логотип.">
+                <a class="header__logo" href="index.html" aria-current="page">
+                    <img src="icons/logo.svg" width="39" height="50" alt="Logo.">
                 </a>
 
-                <div class="header__buttons">
-                    <button class="button"></button>
-                </div>   
+                <button class="header__btn" type="button">
+                    <span class="visually-hidden">Menu</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                        <g clip-path="url(#clip0_8_353)">
+                          <path d="M5 16H27" stroke="white" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M5 8H27" stroke="white" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                          <path d="M5 24H27" stroke="white" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_8_353">
+                            <rect width="32" height="32" fill="white"/>
+                          </clipPath>
+                        </defs>
+                      </svg>
+                </button>
         
-                <nav class="nav">
+                <nav class="header__nav nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a class="nav__link" href="#"></a>
+                            <a class="nav__link" href="#">HOME</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#"></a>
+                            <a class="nav__link" href="#">PRODUCTS</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#"></a>
+                            <a class="nav__link" href="#">SERVICES</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#"></a>
+                            <a class="nav__link" href="#">RESOURCES</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#"></a>
+                            <a class="nav__link" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">CONTACT US</a>
                         </li>
                     </ul>
-                </nav>                 
-           
+                </nav>    
             </div>            
         </div>   
     </header>
 
     <main class="main-container">
-        <section class="promo">
+        <section class="hero">
             <div class="container">
-                <div class="promo__wrap">
+                <div class="hero__wrap">
 
                 </div>             
             </div>              
