--- a/src/index.html
+++ b/src/index.html
@@ -61,15 +61,16 @@
         <section class="hero">
             <div class="container">
                 <div class="hero__wrap">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="84" viewBox="0 0 100 84" fill="none">
-                        <path d="M89.4961 21.1194C89.5565 22.013 89.5566 22.9065 89.5566 23.8082C89.5566 51.2853 69.0727 82.9747 31.617 82.9747V82.9582C20.5525 82.9747 9.71784 79.7383 0.40332 73.6359C2.01219 73.8335 3.62913 73.9324 5.25009 73.9365C14.4195 73.9447 23.3267 70.8029 30.5404 65.0177C21.8267 64.8488 14.1856 59.0471 11.5162 50.5771C14.5686 51.1782 17.7138 51.0547 20.7098 50.2188C11.2098 48.2588 4.37509 39.7353 4.37509 29.8365C4.37509 29.7459 4.37509 29.6594 4.37509 29.573C7.20574 31.183 10.3751 32.0765 13.617 32.1753C4.66945 26.0688 1.91138 13.9135 7.31461 4.41001C17.6533 17.4012 32.9074 25.2988 49.2824 26.1347C47.6412 18.9124 49.8832 11.3441 55.1735 6.26707C63.3751 -1.60587 76.2743 -1.20234 83.984 7.16883C88.5445 6.2506 92.9154 4.54178 96.9154 2.1206C95.3953 6.93413 92.2138 11.023 87.9638 13.6212C92.0001 13.1353 95.9436 12.0318 99.6574 10.3477C96.9235 14.5312 93.4799 18.1753 89.4961 21.1194Z" fill="white"/>
-                    </svg>
                     <div class="hero__text">
                         <h1 class="hero__title">Device Authentication</h1>
-                        <p class="hero__descr">SALT Group is a world leader in authen-
+                        <div class="hero__descr">
+                            <p>SALT Group is a world leader in authen-
                             tication and security. We have
-                            a range of services to improve user authentication.
-                            Discover the possibilities with SALT.</p>
+                            a&nbsp;range&nbsp;of&nbsp;services to improve user authentication.</p>
+                            <p>Discover the possibilities with SALT.</p>
+                        </div>
+
+                            
                         <a href="#" class="button button__hero">GET STARTED</a>
                     </div>
                     <div class="hero__call">
@@ -88,17 +89,17 @@
                     <ul class="stats__list">
                         <li class="stats__item">
                             <h2 class="stats__title">126,300</h2>
-                            <p class="stats_descr">Identity Theft Cases Reported
+                            <p class="stats__descr">Identity Theft Cases Reported
                                 in Australia</p>
                         </li>
                         <li class="stats__item">
                             <h2 class="stats__title">$20.1bn</h2>
-                            <p class="stats_descr">Online Transactions per
-                                annum by Australians</p>
+                            <p class="stats__descr">Online Transactions per
+                                annum&nbsp;by Australians</p>
                         </li>
                         <li class="stats__item">
                             <h2 class="stats__title">45,511</h2>
-                            <p class="stats_descr">Online Fraud Cases Reported
+                            <p class="stats__descr">Online Fraud Cases Reported
                                 in Australia</p>
                         </li>
                     </ul>
@@ -112,13 +113,13 @@
                     <h2 class="service__title">What We Do</h2>
                     <ul class="service__list">
                         <li class="service__item">
-                            <img src="icons/services-icon-1.svg" alt="Device Authentication." class="service__icon">
+                            <img src="icons/services-icon-1.svg" width="106" height="100" alt="Device Authentication." class="service__icon">
                             <h3 class="service__subtitle">Device Authentication</h3>
-                            <p class="service__descr">Hardware-based device fingerprinting resilient to cloning, malware and device jailbreak/root. Hardware-level control over the displayed UI independent of the device operating system. Hardware-level data protection.
+                            <p class="service__descr">Hardware-based device fingerprinting resilient to cloning, malware and device jailbreak/root. Hardware-level control over&nbsp;the displayed UI independent of the device operating system. Hardware-level data protection.
                             </p>
                         </li>
                         <li class="service__item">
-                            <img src="icons/services-icon-2.svg" alt="User Authentication." class="service__icon">
+                            <img src="icons/services-icon-2.svg" width="106" height="109" alt="User Authentication." class="service__icon">
                             <h3 class="service__subtitle">User Authentication</h3>
                             <p class="service__descr">Verify the identity of users for access control with contemporary biometric connected MFA security tokens.
                             </p>
