adds styles for main

--- a/src/index.html
+++ b/src/index.html
@@ -113,37 +113,37 @@
                     <h2 class="service__title">What We Do</h2>
                     <ul class="service__list">
                         <li class="service__item">
-                            <img src="icons/services-icon-1.svg" width="106" height="100" alt="Device Authentication." class="service__icon">
+                            <img src="icons/services-icon-1.svg" width="106" height="100" alt="Device Authentication." class="service__icon service__icon-first">
                             <h3 class="service__subtitle">Device Authentication</h3>
                             <p class="service__descr">Hardware-based device fingerprinting resilient to cloning, malware and device jailbreak/root. Hardware-level control over&nbsp;the displayed UI independent of the device operating system. Hardware-level data protection.
                             </p>
                         </li>
                         <li class="service__item">
-                            <img src="icons/services-icon-2.svg" width="106" height="109" alt="User Authentication." class="service__icon">
+                            <img src="icons/services-icon-2.svg" width="106" height="109" alt="User Authentication." class="service__icon service__icon-second">
                             <h3 class="service__subtitle">User Authentication</h3>
                             <p class="service__descr">Verify the identity of users for access control with contemporary biometric connected MFA security tokens.
                             </p>
                         </li>
                         <li class="service__item">
-                            <img src="icons/services-icon-3.svg" alt="Transaction Authentication." class="service__icon">
+                            <img src="icons/services-icon-3.svg" alt="Transaction Authentication." class="service__icon service__icon-third">
                             <h3 class="service__subtitle">Transaction Authentication</h3>
                             <p class="service__descr">High assurance out-of-band authentication of high impact transactions and instructions initiated through electronic service delivery channels. Audit trail of verification for non-repudiation. Fraud protection against man-in-the-middle and browser malware.
                             </p>
                         </li>
                         <li class="service__item">
                             <img src="icons/services-icon-4.svg" alt="Contemporary
-                            authentication methods" class="service__icon">
+                            authentication methods" class="service__icon service__icon-fourth">
                             <h3 class="service__subtitle">Contemporary
                                 authentication methods</h3>
                             <p class="service__descr">Echidna authentication server to enable adaptive risk-based approach to security through a range of methods for different levels of authentication assurance from SMS OTPs, Challenge/Response, to more contemporary QR code signing and advanced connected mobile security tokens capable of transaction signatures with dynamic linking of the transaction context and addition of PIN, Fingerprint and other biometrics.</p>
                         </li>
                         <li class="service__item">
-                            <img src="icons/services-icon-5.svg" alt="HSM Solutions." class="service__icon">
+                            <img src="icons/services-icon-5.svg" alt="HSM Solutions." class="service__icon service__icon-fifth">
                             <h3 class="service__subtitle">HSM Solutions</h3>
                             <p class="service__descr">Reseller of Thales nShield HSMs with professional services and subject matter expertise in HSMs, key ceremony procedures, and SEE code development.</p>
                         </li>
                         <li class="service__item">
-                            <img src="icons/services-icon-6.svg" alt="Cloud & IoT Security." class="service__icon">
+                            <img src="icons/services-icon-6.svg" alt="Cloud & IoT Security." class="service__icon service__icon-sixth">
                             <h3 class="service__subtitle">Cloud & IoT Security</h3>
                             <p class="service__descr">Secure the identity and access of users, devices and Internet of Things connecting into the cloud. Support cloud adoption and migration of applications and data into private and public clouds.</p>
                         </li>
@@ -179,24 +179,24 @@
                           <legend class="application__subtitle">Contact us</legend>
                           <ul class="application__list">
                             <li class="application__item">
-                              <label for="name">First Name</label>
-                              <input type="text" name="name" placeholder="First Name" id="name" required>
+                              <label class="application__label" for="name">First Name</label>
+                              <input class="application__input" type="text" name="name" placeholder="First Name" id="name" required>
                             </li>
                             <li class="application__item">
-                                <label for="surname">Last Name</label>
-                                <input type="text" name="surname" placeholder="Last Name" id="surname" required>
+                                <label class="application__label" for="surname">Last Name</label>
+                                <input class="application__input" type="text" name="surname" placeholder="Last Name" id="surname" required>
                             </li>
                             <li class="application__item">
-                                <label for="email">Email Address</label>
-                                <input type="email" name="mail" placeholder="Email Address" id="email" required>
+                                <label class="application__label" for="email">Email Address</label>
+                                <input class="application__input" type="email" name="mail" placeholder="Email Address" id="email" required>
                             </li>
                             <li class="application__item">
-                                <label for="message">Your message</label>
-                                <textarea name="comment" placeholder="Textarea" id="message"></textarea>
+                                <label class="application__label" for="message">Your message</label>
+                                <textarea class="application__textarea" name="comment" placeholder="Textarea" id="message"></textarea>
                             </li>
                           </ul>
                         </fieldset>
-                        <button type="submit">SEND</button>
+                        <button class="button button__application" type="submit">SEND</button>
                       </form>                    
                 </div>
             </div>
