adds hamburger-active

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                     <img src="icons/logo.svg" width="39" height="50" alt="Logo.">
                 </a>
 
-                <button class="header__btn" type="button">
+                <button class="header__hamburger" type="button">
                     <span class="visually-hidden">Menu</span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                         <g clip-path="url(#clip0_8_353)">
@@ -34,7 +34,7 @@
                 <nav class="header__nav nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a class="nav__link" href="#">HOME</a>
+                            <a class="nav__link" href="index.html">HOME</a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#">PRODUCTS</a>
@@ -303,9 +303,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-                
+        </div>            
 
             
             <div class="footer__bottom">
