--- a/src/index.html
+++ b/src/index.html
@@ -106,23 +106,13 @@
                         <div class="swiper-scrollbar"></div>
                     </div>
 
-
-                    <!-- <div class="hero__text">
-                        <h1 class="hero__title">Device Authentication</h1>
-                        <div class="hero__descr">
-                            <p>SALT Group is a world leader in authen-
-                            tication and security. We have
-                            a&nbsp;range&nbsp;of&nbsp;services to improve user authentication.</p>
-                            <p>Discover the possibilities with SALT.</p>
-                        </div>                            
-                        <a href="#" class="button button__hero">GET STARTED</a>
-                    </div> -->
-
                     <div class="hero__call">
                         FIND OUT MORE
-                        <svg xmlns="http://www.w3.org/2000/svg" width="62" height="71" viewBox="0 0 62 71" fill="none">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M62 17.75L31 0L0 17.75V53.25L31 71L62 53.25V17.75ZM31 3.28249L59.1336 19.3912V51.6087L31 67.7175L2.8664 51.6087V19.3912L31 3.28249ZM19.2596 31.0114C18.4375 30.3157 17.207 30.4183 16.5114 31.2404C15.8157 32.0625 15.9183 33.293 16.7404 33.9886L29.7404 44.9886C30.4675 45.6038 31.5325 45.6038 32.2596 44.9886L45.2596 33.9886C46.0817 33.293 46.1843 32.0625 45.4886 31.2404C44.793 30.4183 43.5625 30.3157 42.7404 31.0114L31 40.9456L19.2596 31.0114Z" fill="#FF8B00"/>
-                        </svg>
+                        <a href="#service">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="62" height="71" viewBox="0 0 62 71" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M62 17.75L31 0L0 17.75V53.25L31 71L62 53.25V17.75ZM31 3.28249L59.1336 19.3912V51.6087L31 67.7175L2.8664 51.6087V19.3912L31 3.28249ZM19.2596 31.0114C18.4375 30.3157 17.207 30.4183 16.5114 31.2404C15.8157 32.0625 15.9183 33.293 16.7404 33.9886L29.7404 44.9886C30.4675 45.6038 31.5325 45.6038 32.2596 44.9886L45.2596 33.9886C46.0817 33.293 46.1843 32.0625 45.4886 31.2404C44.793 30.4183 43.5625 30.3157 42.7404 31.0114L31 40.9456L19.2596 31.0114Z" fill="#FF8B00"/>
+                            </svg>
+                        </a>
                     </div>                    
                 </div>             
             </div>              
@@ -152,7 +142,7 @@
             </div>
         </section>
 
-        <section class="service">
+        <section class="service" id="service">
             <div class="container">
                 <div class="service__wrap">
                     <h2 class="service__title">What We Do</h2>
@@ -204,12 +194,27 @@
                     <div class="info__text">
                         <h2 class="info__title">Product Spotlight</h2>
                         <p class="info__descr">Salt mSign Connected Token is a contemporary mobile security 2FA token for authentication of user identity and verification of transactions independent of the delivery channel that initiated the request.</p>
+
+                        <div class="info__play">
+                            <picture class="info__picture">
+                                <img src="img/video@1x.jpg" srcset="img/video@2x.jpg" width="319" height="196" alt="Open video">
+                            </picture>
+                            <div class="info__picture-over">
+                                <button id="myBtn">
+                                    <svg class="info__icon" xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M30.9268 16.9634C30.9268 24.6752 24.6752 30.9268 16.9634 30.9268C9.25163 30.9268 3 24.6752 3 16.9634C3 9.25163 9.25163 3 16.9634 3C24.6752 3 30.9268 9.25163 30.9268 16.9634ZM33.9268 16.9634C33.9268 26.332 26.332 33.9268 16.9634 33.9268C7.59477 33.9268 0 26.332 0 16.9634C0 7.59477 7.59477 0 16.9634 0C26.332 0 33.9268 7.59477 33.9268 16.9634ZM14.2096 22.4963L22.471 16.9634L14.2096 11.4305L14.2096 22.4963Z" fill="white"/>
+                                    </svg>
+                                </button>
+                                <p class="info__feature">Feature video</p>
+                                <p>mSign Connected token</p>    
+                            </div>                     
+                        </div>
                     </div>
-                    <video class="info__video" controls width="319">
+                    <!-- <video class="info__video" controls width="319">
                         <source src="flower.webm" type="video/webm">
                         <source src="flower.mp4" type="video/mp4">
                         Your browser does not support embedded videos
-                    </video>
+                    </video> -->
                     <a href="#" class="button button__info">MORE INFO</a>               
                 </div>
             </div>
@@ -355,6 +360,13 @@
             <p class="footer__bottom-right">ALL RIGHTS RESERVED. WEBSITE BY DORNE CREATIVE.</p>
         </div>
     </footer>
+
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/NfoyC45A_fg?si=B3maO9nSLngnPS_V" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
