adds adaptive min-width 800px

--- a/src/index.html
+++ b/src/index.html
@@ -149,15 +149,21 @@
                     <ul class="service__list">
                         <li class="service__item">
                             <img src="icons/services-icon-1.svg" width="106" height="100" alt="Device Authentication." class="service__icon service__icon-first">
-                            <h3 class="service__subtitle">Device Authentication</h3>
-                            <p class="service__descr">Hardware-based device fingerprinting resilient to cloning, malware and device jailbreak/root. Hardware-level control over&nbsp;the displayed UI independent of the device operating system. Hardware-level data protection.
-                            </p>
+                            <div class="service__text">
+                                <h3 class="service__subtitle">Device Authentication</h3>
+                                <p class="service__descr">Hardware-based device fingerprinting resilient to cloning, malware and device jailbreak/root. Hardware-level control over&nbsp;the displayed UI independent of the device operating system. Hardware-level data protection.
+                                </p>
+                            </div>
+
                         </li>
                         <li class="service__item">
                             <img src="icons/services-icon-2.svg" width="106" height="109" alt="User Authentication." class="service__icon service__icon-second">
-                            <h3 class="service__subtitle">User Authentication</h3>
-                            <p class="service__descr">Verify the identity of users for access control with contemporary biometric connected MFA security tokens.
-                            </p>
+                            <div class="service__text">
+                                <h3 class="service__subtitle">User Authentication</h3>
+                                <p class="service__descr">Verify the identity of users for access control with contemporary biometric connected MFA security tokens.
+                                </p>
+                            </div>
+
                         </li>
                         <li class="service__item">
                             <img src="icons/services-icon-3.svg" alt="Transaction Authentication." class="service__icon service__icon-third">
